--- a/index.html
+++ b/index.html
@@ -1,185 +1,16 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=,, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;
+700&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>MagerinAja</title>
     <link rel="shortcut icon" href="Images/LOGO_DWIKY_DESIGN.png" type="image/x-icon">
-    
-    <!-- Gabungan style.css -->
-    <style>
-        .container {
-          max-width: 1200px;
-          width: 100%;
-          margin: 0 auto;
-          font-family: "Poppins", sans-serif;
-          background-color: rgb(0, 0, 0);
-        }
-
-        h2 {
-          margin: 10px 0 10px;
-          line-height: 120%;
-          color: #ff0000;
-          text-align: center;
-        }
-
-        h4 {
-          margin: 1px 0 2px;
-          color: #ffffff;
-          padding-top: 1px;
-          text-align: left;
-        }
-
-        h1, h3, h5 {
-          margin: 10px 0 10px;
-          line-height: 120%;
-          color: #ffffff;
-          text-align: center;
-        }
-
-        p {
-          margin: 0;
-          line-height: 180%;
-          color: #ffffff;
-          text-align: center;
-        }
-
-        .row {
-          display: flex;
-          flex-wrap: wrap;
-        }
-
-        .ai-center {
-          align-items: center;
-        }
-
-        .js-center {
-          justify-content: center;
-        }
-
-        .jc-sb {
-          justify-content: space-between;
-        }
-
-        .header {
-          border-color: #ff8800;
-          border-radius: 12px;
-        }
-
-        .nav-space {
-          margin: 0 1.4%;
-        }
-
-        .nav-brand {
-          font-family: "Dancing Script", cursive;
-        }
-
-        .nav-brand h1 a {
-          text-decoration: none;
-          color: #f1a210;
-        }
-
-        .nav-contact a {
-          text-decoration: none;
-        }
-
-        .btn1 {
-          background: rgb(255, 174, 0);
-          border-radius: 7px;
-          padding: 6px 16px;
-          color: white;
-          margin: 4px 0;
-        }
-
-        .btn3 {
-          background: rgb(219, 0, 0);
-          border-radius: 7px;
-          padding: 11px 16px;
-          color: white;
-        }
-
-        .col12 {
-          width: 100%;
-          margin: 1.4%;
-        }
-
-        .img-responsive {
-          width: 100%;
-        }
-
-        .img-radius {
-          border-radius: 0px;
-        }
-
-        @media screen and (max-width: 480px) {
-          .col12 {
-            width: 100%;
-          }
-        }
-
-        /* Footer styles */
-        footer {
-          background-color: #333;
-          color: #fff;
-          padding: 20px 0;
-        }
-
-        .footer-container {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-around;
-          max-width: 1200px;
-          margin: 0 auto;
-          padding: 20px;
-        }
-
-        .footer-section {
-          flex-basis: 30%;
-          margin-bottom: 20px;
-        }
-
-        .footer-section h3 {
-          margin-bottom: 10px;
-          font-size: 18px;
-        }
-
-        .footer-section input,
-        .footer-section textarea {
-          width: 100%;
-          padding: 10px;
-          margin-bottom: 10px;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-        }
-
-        .footer-section button {
-          background-color: #555;
-          color: white;
-          padding: 10px 15px;
-          border: none;
-          cursor: pointer;
-          border-radius: 5px;
-        }
-
-        .footer-section button:hover {
-          background-color: #777;
-        }
-
-        .footer-bottom {
-          text-align: center;
-          padding: 10px 0;
-          background-color: #222;
-        }
-
-        @media screen and (max-width: 768px) {
-          .footer-section {
-            flex-basis: 100%;
-          }
-        }
-    </style>
 </head>
 <body>
     <!-- Header -->
@@ -190,58 +21,132 @@
                     <h1><a href="">magerinaja</a></h1>
                 </div>
                 <div class="nav-contact">
-                    <a href="https://wa.link/jufp6t" class="btn">WhatsApp</a>
+                    <a href="https://wa.link/jufp6t" class="btn">whatsApp</a>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- End Header -->
     <!-- Hero -->
     <div class="hero">
         <div class="container">
             <div class="row jc-center">
                 <div class="col12">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjJMPSQc9tH0csWN80GM9yKHOXuvFZha-76xOqpwccBxLmhpJN5Cmfx2Ns8HqEjBGrDh2clnth9kZxwbd2fxOGIJEhi3X8oMn9fxDfElf4ZG-VQlgWqgMiMSZFfAnhs8rB8LHqnKDo9YJWHXOtoDwUEmWOUvWxudqtvQV0vtXbdJqdOzaBA_PG3oEPI_D0B/s1600/Banner_Magerinaja.png" alt="Banner MagerinAja" class="img-responsive img-radius">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjJMPSQc9tH0csWN80GM9yKHOXuvFZha-76xOqpwccBxLmhpJN5Cmfx2Ns8HqEjBGrDh2clnth9kZxwbd2fxOGIJEhi3X8oMn9fxDfElf4ZG-VQlgWqgMiMSZFfAnhs8rB8LHqnKDo9YJWHXOtoDwUEmWOUvWxudqtvQV0vtXbdJqdOzaBA_PG3oEPI_D0B/s1600/Banner_Magerinaja.png" alt="" class="img-responsive img-radius">
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- Franchise Section -->
-    <div class="franchise spacer2">
-        <div class="container">
-            <div class="row ai-center">
-                <div class="col6">
-                    <div class="fc-desc">
-                        <h2>Solusi Ke-mageranmu!</h2>
-                        <p>Ayo rek! Kami siap melayanimu 24/7 untuk semua kebutuhanmu, mulai dari jasa antar jemput hingga jasa kreatif.</p>
+    <!-- End Hero -->
+        <!-- Franchise -->
+        <div class="franchise spacer2">
+            <div class="container">
+                <div class="row ai-center">
+                    <div class="col6">
+                        <div class="fc-desc">
+                            <h2>Solusi Ke-mageran mu !!!!</h2>
+                            <p>Ayo rek!!! kami siap melayani mu 24/7 untuk semua kebutuhanmu. mulai dari jasa antar jemput, jasa joki tugas dan skripsi, jasa peta Ar-Gis hingga jasa apa pokok yang kamu butuhin kami selalu siap sedia melayani.</p>
+                        </div>
+                    </div>
+                    <div class="col6">
+                        <div class="fc-image">
+                            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgGeQMn9UGvS982WXOleCJOM34CHn6gfWKEIviyRzaiI0nvz1yXUNNItmfAJQVOPjDYdxq-TuCJMdWRxIgeDyv0i1f843VHPn5f-jkf20nxEF1Cd8A1xJ3DgG_P8yFH5KSmmboCu3-Q1vX_GdEZo4U6S4VutQbSq4cmxvankGGRkROMRDJXIlpvBrVq1skn/s1201/Banner%20Bawah%20Magerinaja.png" alt="" class="img-responsive">
+                        </div>
                     </div>
                 </div>
-                <div class="col6">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgGeQMn9UGvS982WXOleCJOM34CHn6gfWKEIviyRzaiI0nvz1yXUNNItmfAJQVOPjDYdxq-TuCJMdWRxIgeDyv0i1f843VHPn5f-jkf20nxEF1Cd8A1xJ3DgG_P8yFH5KSmmboCu3-Q1vX_GdEZo4U6S4VutQbSq4cmxvankGGRkROMRDJXIlpvBrVq1skn/s1201/Banner%20Bawah%20Magerinaja.png" alt="Banner Franchise" class="img-responsive">
-                </div>
             </div>
         </div>
-    </div>
-
-    <!-- Product Section -->
+        <!-- End Franchise -->
+    <!-- Product -->
     <div class="product spacer2">
         <div class="container">
             <div class="row">
                 <div class="col12">
-                    <!-- Produk pertama -->
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh21N07eWf2TTo7BH41aMv1_Q73TaNlS8isc5VRLYWtAMtrx0qkhvjEMZmXeUGuh5My2WgdAE8k3w0P1z_C2dU3YXZW_7zpCcuYc7eNdcRBwmCzSC3yQYb1UpJlaRrOZZMVEcnnYNUJHP959WFqoqdWlo1rbup85JUd97Sin5IIbARshL7VeMQhAmQbRUxB/s600/PRODUK-Margerinaja-1(1).png" alt="Produk 1" class="img-responsive img-radius">
-                    <h4>Jasa Antar Jemput Start From 5K</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh21N07eWf2TTo7BH41aMv1_Q73TaNlS8isc5VRLYWtAMtrx0qkhvjEMZmXeUGuh5My2WgdAE8k3w0P1z_C2dU3YXZW_7zpCcuYc7eNdcRBwmCzSC3yQYb1UpJlaRrOZZMVEcnnYNUJHP959WFqoqdWlo1rbup85JUd97Sin5IIbARshL7VeMQhAmQbRUxB/s600/PRODUK-Margerinaja-1(1).png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa antar jemput start from 5K</h4></div>
                     <a href="https://wa.link/cf10zt" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhP-r9PVd5tAjaGTfBevgXcFhkdoW0q-yFJimE8PDKajwRYw1rMJyOC-JUKGpqBveuin9LTiJC6tWaH-g9AYXNzTsqGXOPE-Lmq-rzqesrUN4S7FDA8-GmaXUJA5M2xHqIjS5JL45-ZF0ZQQiwF4L5kzQgpwMqQA9LeVq-hlyqqTqMto1oApIc2FrOLYZ5I/s600/PRODUK-Margerinaja-2.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa pesan dan antar makanan start from 5K (hanya ongkos kirim belum termasuk harga makanan)</h4></div>
+                    <a href="https://wa.link/q6vf9y" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhRtPFH1frRwcjmecH9lk2BHuW0COCcoFOvvyib0cOEz3pCcB8Z3qnoLpVllQYFyWSNUdOHJA0uasBVRIDRdzWVYJ09f-V2yW3weEgub8xQBYOZf-0oz8hTgp4ka_uRSzzZnZV-376WH9CDROc6dCp7OYMU22fcCpIDOwdCpFAcSJYjVQiffAeQBtU-9-bD/s320/PRODUK-Margerinaja-3.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa joki tugas sekolah/kuliah start from 5K</h4></div>
+                    <a href="https://wa.link/ehy0je" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhJgYvGd1_-NhObfRGYorBpZ9HPtStI1m13cUqCeAnVCxkG5nLlTX7Tma9E2TOX_pNM3clRU1ouLXglG8j7KiBu1On_pJ8wAbgreZ88P2jbzD4G1IwyKVwZkveGJgDZMgz_c54iVozcqzRc-zyvPTQCx4XMRHUZwi-MfQ3hPsTeIgh4-PG576liH2cD9XPf/s320/PRODUK-Margerinaja-4.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa isi kuesioner start from 5K</h4></div>
+                    <a href="https://wa.link/a2lnjv" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh1vSCjPfwxYAi0ybNuv68NZUzb73l0ho3vr3t3ohDY_78IMo5evx4ZpaO-kfe6pkh3x7-1k-LpUuSeW1NTRRuNT1bXAJt7iqQyv9-TOqG8xGClttEsFLjVYMKkxgDWalt1q9oi2k9EaJBxaa7n720podC0-v4oh59qJ2HK7tEs71W0DUDVatl051ZM7K1Z/s320/PRODUK-Margerinaja-5.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa pembuatan peta tematik, administrasi, dll menggunakan ArcGis start from 5K</h4></div>
+                    <a href="https://wa.link/b6lhbs" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgxiPrXbzTivTlEpi1zAuPZdKlX9BLv098m8J30-Q-ZkVxtMDB_z_iXhr9MlIztc84EcGJxZNLnXgn3YEpsYuFYM6SFz8DKrizdcXGXXV5yWtl2cjG7MKicZpUzPBBsxG7DslH_5br8FkHCvoeq8D-2opof1RYG4uTOc9XQwQsdrtJGf1OZSoCR5zltUhAN/s320/PRODUK-Margerinaja-6%20(1).png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa desain grafis dan editor video start from 5K</h4></div>
+                    <a href="https://wa.link/yta6vd" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg-fs7p8QAHCNmQbefMVW2aQ4H5CEhynRb4MSqxyqNDo999Zkdy5MscpkrGNeZLph0f-5KOhoRu_8yhbT2qghVplZ-yt1GbScTj4j5GqQJbkFssnPE_m7Opft2Dj6v3w6M_7SkvpW7sSmcxkDx1O_5xKIPZ8x-EDuTKHMMJ2vAcoS1zQaMzCufqc0BeF7fV/s320/PRODUK-Margerinaja-7.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa order makanan dengan promo Grab Food/Gofood start from 5K (hanya biaya jasa belum termasuk harga makanan)</h4></div>
+                    <a href="https://wa.link/zh1ovf" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjeRZrgPTIqCoINfDlAsx-XyIvUcD5yZIDSYh6yLcw1of2OIz_Twlu5kYRlHXqOOpmR7UC2bxY4vrdiKNT87Y7oD4KMaEbNehuqRM-MATbsYyJ35ijCeKuganeWHQJ01JhlEqNW2aUznFySyuBR3OvMEj6XZVhba70HmIVkbeES1FHCWGm6EV38bE5yPeEA/s320/PRODUK-Margerinaja-8.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa pembuatan bucket start from 5K</h4></div>
+                    <a href="https://wa.link/cg1do7" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEin0jLMD06EmbzhcF6qxB-1ErinLVIvpmGqiWn6MOIbmhB4f-8lEVwcumAoIAgjUX9KCY75r_VO_UuETGX08IoLQtV_q1IqN80n69cot9A9-yqIJDi10uWfX5Fv9heR-qWMFYq9nLMsH55mfai5Ouia4RmBbyesoRQLoZ5N9IchYnUNKbqaBJ8iYS4Bjspj/s320/PRODUK-Margerinaja-9.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa pembuatan konsumsi untuk acara seminar, dll. start from 5K</h4></div>
+                    <a href="https://wa.link/3ivayx" class="btn3">Pesan Sekarang</a>
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhdZV2QJ020-s3DCtgkVPe2tcquOarroZpttpKvC5ZniWxFVGJo9O4naPLQZmVn2TBdGvX9R-E9-J_iBEC9ethYJI5oC636PBAu7U7nQUQnynM7I6PqFzQq6aiURIHFxzVje5isbWxexA9KlcCtwD790rBiUz0vdw8_WkE6BtyqcWAxt4_p_LhH6kZGdMoY/s320/PRODUK-Margerinaja-10.png" alt="" class="img-responsive img-radius">
+                    <div class="name"><h4>Jasa apa saja sesuai permintaan dari konsumen start from 5K</h4></div>
+                    <a href="https://wa.link/xw6ro5" class="btn3">Pesan Sekarang</a>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- End Of Product -->
+    <!-- Testimoni -->
+    <div class="Testimoni">
+        <div class="container">
+            <div class="row">
+                <div class="col12">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhgPoGqSYjXCG5IDLKxoOinR3RIKP-CitMv3PeGa8T-2eh7F6_2QVOxmzwSwa774TAh65fcjd-wI9cZi0U6PTsrPasZgtaM2tVKtBJ1vUjMnxE3UanaGnTkq80XrttZ2c9orlQdVRDI1F7Z0Xuq5nSaRzIrIunNKqS7ZJAVFLGGNqT6794VP4_3EXaMydv0/s320/PRODUK-Margerinaja-11.png" alt="" class="img-responsive">
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhgPoGqSYjXCG5IDLKxoOinR3RIKP-CitMv3PeGa8T-2eh7F6_2QVOxmzwSwa774TAh65fcjd-wI9cZi0U6PTsrPasZgtaM2tVKtBJ1vUjMnxE3UanaGnTkq80XrttZ2c9orlQdVRDI1F7Z0Xuq5nSaRzIrIunNKqS7ZJAVFLGGNqT6794VP4_3EXaMydv0/s320/PRODUK-Margerinaja-11.png" alt="" class="img-responsive">
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhgPoGqSYjXCG5IDLKxoOinR3RIKP-CitMv3PeGa8T-2eh7F6_2QVOxmzwSwa774TAh65fcjd-wI9cZi0U6PTsrPasZgtaM2tVKtBJ1vUjMnxE3UanaGnTkq80XrttZ2c9orlQdVRDI1F7Z0Xuq5nSaRzIrIunNKqS7ZJAVFLGGNqT6794VP4_3EXaMydv0/s320/PRODUK-Margerinaja-11.png" alt="" class="img-responsive">
+                </div>
+                <div class="col3">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhgPoGqSYjXCG5IDLKxoOinR3RIKP-CitMv3PeGa8T-2eh7F6_2QVOxmzwSwa774TAh65fcjd-wI9cZi0U6PTsrPasZgtaM2tVKtBJ1vUjMnxE3UanaGnTkq80XrttZ2c9orlQdVRDI1F7Z0Xuq5nSaRzIrIunNKqS7ZJAVFLGGNqT6794VP4_3EXaMydv0/s320/PRODUK-Margerinaja-11.png" alt="" class="img-responsive">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Testimoni -->
     <!-- Footer -->
     <footer>
         <div class="footer-container">
-            <!-- Kontak -->
+            <!-- Alamat dan Kontak Informasi -->
             <div class="footer-section">
                 <h3>Kontak Kami</h3>
                 <p>Alamat: Jalan Pringgodani, gang amarta no 8. RT 03/RW03. Kelurahan Mrican, Mojoroto. Kota Kediri</p>
@@ -252,13 +157,13 @@
             <!-- Maps -->
             <div class="footer-section">
                 <h3>Lokasi Kami</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126915.73140430182!2d106.6894299600295!3d-6.229386700340186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f154d27b6db3%3A0xf26db1e1bf22f19!2sJakarta!5e0!3m2!1sid!2sid!4v1694162195972!5m2!1sid!2sid" width="100%" height="200" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d831.0359418276638!2d111.99813172017261!3d-7.77970687409105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sid!2sid!4v1725795779032!5m2!1sid!2sid" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
             <!-- Formulir Kontak -->
             <div class="footer-section">
                 <h3>Hubungi Kami</h3>
-                <form action="mailto:magerinaja@gmail.com" method="post" enctype="text/plain">
+                <form action="mailto:info@websiteanda.com" method="post" enctype="text/plain">
                     <label for="name">Nama:</label>
                     <input type="text" id="name" name="name" required><br><br>
 
@@ -272,11 +177,11 @@
                 </form>
             </div>
         </div>
-
-        <!-- Copyright -->
-        <div class="footer-bottom">
-            <p>&copy; 2024 Website Anda. Semua Hak Cipta Dilindungi.</p>
-        </div>
-    </footer>
+    <!-- Copyright -->
+    <div class="footer-bottom">
+        <p>&copy; 2024 Website Anda. Semua Hak Cipta Dilindungi.</p>
+    </div>
+</footer>
+    </div>
 </body>
 </html>
